# OpenGLSample

./: .gitignore  CMakeLists.txt
Executable/: CMakeLists.txt
Executable/src/: main.cpp
Framework/: CMakeLists.txt
Framework/include/: Framework.h  IRenderer.h  InputProcessor.h  Renderer2D.h  Vertex.h  Window.h
Framework/src/: Framework.cpp  InputProcessor.cpp  Renderer2D.cpp  Window.cpp
src/: main.cpp
